plugins {
	id 'java'
	id 'application'
}

sourceSets {
	main {
		java {
			srcDir 'src'
		}
	}
}

dependencies {
	implementation 'org.hsqldb:hsqldb:2.6.0'
}

java {
	sourceCompatibility JavaVersion.VERSION_16
}

compileJava {
	options.compilerArgs.add('--enable-preview')
}

application {
	mainModule.set('ritzow.notes.server')
	mainClass.set('ritzow.notes.server.RunServer')
}

run {
	doLast {
		workingDir project.file('server')
	}

	jvmArgs.add('--enable-preview')
}